# mf-embedded

./: .gitignore  .gitmodules  README.md  mf-embedded-config.json
apps/: arduino_spi_ultrasound.ino
apps/attiny85/button/: Makefile  main.c
apps/attiny85/mflib/: Makefile  debug_utils.c  debug_utils.h  usi_twi_slave.c
apps/attiny85/semaphore/: Makefile  main.c  usi_twi_slave.c  usi_twi_slave.h
apps/attiny85/tempSensor/: tempSensor.ino
apps/go_soft_client/: go.mod  hello.go
apps/go_soft_server/: go.mod  go.sum  test.txt  updates.go
src/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.old
src/components/include/: mf_button.h  mf_component_handler.h  mf_delay.h  mf_device.h  mf_discovery.h  mf_discovery_i2c.h  mf_discovery_spi.h  mf_gpio_interrupt.h  mf_helpers.h  mf_hw_button.h  mf_hw_semaphore.h  mf_hw_temp.h  mf_hw_ultrasound.h  mf_i2c.h  mf_i2c_device.h  mf_i2c_interrupt.h  mf_log.h  mf_main.h  mf_oc_helpers.h  mf_power.h  mf_semaphore.h  mf_spi.h  mf_spi_device.h  mf_switch_actuator.h  mf_temp.h  mf_ultrasound.h  mf_updates_handler.h
src/components/mf_button/: CMakeLists.txt  mf_button.c
src/components/mf_component_handler/: CMakeLists.txt  mf_component_handler.c
src/components/mf_delay/: CMakeLists.txt  mf_delay.c
src/components/mf_discovery/: CMakeLists.txt  mf_discovery.c
src/components/mf_discovery_i2c/: CMakeLists.txt  mf_discovery_i2c.c
src/components/mf_discovery_spi/: CMakeLists.txt  mf_discovery_spi.c
src/components/mf_gpio_interrupt/: CMakeLists.txt  (+1 more)
src/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+37 files in other folders)
